--- a/PAGES/3c_arrays/index.html
+++ b/PAGES/3c_arrays/index.html
@@ -2044,7 +2044,7 @@ color: white;
 </li>
 </ul>
 <p>  <span style="color: rgb(62, 121, 180);"><strong> Arrays</strong></span> represent the most common data structure for collections. They are formally defined as objects with type <code>Array&#123;T,d&#125;</code>, where <code>d</code> is the array&#39;s dimension and <code>T</code> is its elements&#39; type &#40;e.g., <code>Int64</code> or <code>Float64</code>&#41;.</p>
-<p>Two special types of arrays are   <span style="color: rgb(62, 121, 180);"><strong> vectors</strong></span> &#40;1-dimensional arrays&#41; and   <span style="color: rgb(62, 121, 180);"><strong> matrices</strong></span> &#40;2-dimensional arrays&#41;. The type <code>Vector&#123;T&#125;</code> is an alias for <code>Array&#123;T,1&#125;</code>, whereas <code>Matrix&#123;T&#125;</code> is an alias for <code>Array&#123;T,2&#125;</code>. Although we include an optional section about matrices, the website will almost exclusively concentrate on vectors, as they&#39;re sufficient for explaining the fundamentals of Julia.</p>
+<p>Two special types of arrays are   <span style="color: rgb(62, 121, 180);"><strong> vectors</strong></span> &#40;1-dimensional arrays&#41; and   <span style="color: rgb(62, 121, 180);"><strong> matrices</strong></span> &#40;2-dimensional arrays&#41;: the type <code>Vector&#123;T&#125;</code> is an alias for <code>Array&#123;T,1&#125;</code>, whereas <code>Matrix&#123;T&#125;</code> is an alias for <code>Array&#123;T,2&#125;</code>. Although we include an optional section about matrices, the website will almost exclusively concentrate on vectors, as they&#39;re sufficient for explaining the fundamentals of Julia.</p>
  <div class=note>  <div class=title>  <span class="note_title" style="font-weight:500;">
       <img src="/julia_book/assets/icons/exclamation.png" style="width:auto; height:30px;opacity:0.99;padding-bottom:4px; margin-left:-4px;">      
       <b>Remark</b> </span>  </div>  <div class=content> <strong> Julia uses 1 as an array's first index</strong>. This contrasts with many other languages &#40;e.g., Python&#41;, where 0 is used as the first index.  </div>  </div>
@@ -2057,12 +2057,12 @@ color: white;
     <div class="row">
       <div class="col-lg- mx-auto">
         <h2>Vectors</h2></p>
-<p><strong> Vectors</strong> in Julia are defined as  <em> column-vectors</em>. Their elements are separated by a comma or semicolon. </p>
+<p><strong> Vectors</strong> in Julia are defined as  <em> column-vectors</em>. Their elements are separated by a comma or a semicolon. </p>
  <div class=" code_box"> <details  open><summary> Code  </summary> <div class="code_inline"><div class="code_NoFormat"></p>
 <pre><code class="language-julia">x &#61; &#91;1, 2, 3&#93;          #&#61; column-vector &#40;defined using commas or semicolons&#41;
                            Vector&#123;Int64&#125; &#40;alias for Array&#123;Int64, 1&#125;&#41; &#61;# 
 
-x &#61; &#91;1; 2; 3&#93;          # equivalent notation to define &#96;A&#96;</code></pre>
+x &#61; &#91;1; 2; 3&#93;          # equivalent notation to define &#96;x&#96;</code></pre>
 <p></div> </div> <div class="output_in_modal"><div class="sign_output">Output in REPL </div>  <div class="mixed_output_inline"><div class="julia_repl_NoFormat"> <span style="color:rgb(32, 198, 121) !important; font-weight: bold;">julia&gt</span> <code>x</code><br/><div class="akin_to_pre">3-element Vector{Int64}:
  1
  2
@@ -2071,30 +2071,30 @@ x &#61; &#91;1; 2; 3&#93;          # equivalent notation to define &#96;A&#96;</
       <img src="/julia_book/assets/icons/exclamation.png" style="width:auto; height:30px;opacity:0.99;padding-bottom:4px; margin-left:-4px;">      
       <b>Remark</b> </span>  </div>  <div class=content>     Arrays can hold elements of various types, such as numbers and strings. For example, <code>x &#61; &#91;1, 2.5, &quot;Hello&quot;&#93;</code> is a valid vector, and Julia identifies it as having elements of type <code>Any</code> &#40;recall that <code>Any</code> encompasses all the possible types supported by Julia&#41;. However, arrays mixing types are highly discouraged for several reasons, including performance.  </div>  </div>
  <h4> Accessing a Vector&#39;s Elements </h4>
-<p>Given a vector <code>x</code>, we can access its  <em> i</em>-th element by <code>x&#91;i&#93;</code>. Furthermore,  all its elements are denoted by <code>x&#91;:&#93;</code>.</p>
+<p>Given a vector <code>x</code>, we can access its  <em> i</em>-th element by <code>x&#91;i&#93;</code>. Furthermore, all its elements are denoted by <code>x&#91;:&#93;</code>.</p>
  <div class=" code_box"> <details  open><summary> Code  </summary> <div class="code_inline"><div class="code_NoFormat"></p>
 <pre><code class="language-julia">x &#61; &#91;4, 5, 6&#93;</code></pre>
 <p></div> </div> <div class="output_in_modal"><div class="sign_output">Output in REPL </div>  <div class="mixed_output_inline"><div class="julia_repl_NoFormat"> <span style="color:rgb(32, 198, 121) !important; font-weight: bold;">julia&gt</span> <code>x&#91;2&#93;</code><br/><div class="akin_to_pre">5</div> </div><br/> <div class="julia_repl_NoFormat"> <span style="color:rgb(32, 198, 121) !important; font-weight: bold;">julia&gt</span> <code>x&#91;:&#93;</code><br/><div class="akin_to_pre">3-element Vector{Int64}:
  4
  5
  6</div> </div></div> </div>   </details></div>
-<p>There are multiple approaches for accessing a subset of elements. Next, we&#39;ll present two basic ways to do it.  The simplest way is by <strong> through a vector</strong>, where the syntax is <code>x&#91;&lt;vector&gt;&#93;</code>.</p>
+<p>There are multiple approaches for accessing a subset of elements. Next, we&#39;ll present two basic ways to do it.  The simplest one is <strong> through a vector</strong>, where the syntax is <code>x&#91;&lt;vector&gt;&#93;</code>.</p>
  <div class=" code_box"> <details  open><summary> Code  </summary> <div class="code_inline"><div class="code_NoFormat"></p>
-<pre><code class="language-julia">a &#61; &#91;4, 5, 6, 7, 8&#93;</code></pre>
-<p></div> </div> <div class="output_in_modal"><div class="sign_output">Output in REPL </div>  <div class="mixed_output_inline"><div class="julia_repl_NoFormat"> <span style="color:rgb(32, 198, 121) !important; font-weight: bold;">julia&gt</span> <code>a&#91;&#91;1,3&#93;&#93;</code> # elements of &#39;a&#39; with indices 1 and 3<br/><div class="akin_to_pre">2-element Vector{Int64}:
+<pre><code class="language-julia">x &#61; &#91;4, 5, 6, 7, 8&#93;</code></pre>
+<p></div> </div> <div class="output_in_modal"><div class="sign_output">Output in REPL </div>  <div class="mixed_output_inline"><div class="julia_repl_NoFormat"> <span style="color:rgb(32, 198, 121) !important; font-weight: bold;">julia&gt</span> <code>x&#91;&#91;1,3&#93;&#93;</code> # elements of &#39;x&#39; with indices 1 and 3<br/><div class="akin_to_pre">2-element Vector{Int64}:
  4
- 6</div> </div><br/> <div class="julia_repl_NoFormat"> <span style="color:rgb(32, 198, 121) !important; font-weight: bold;">julia&gt</span> <code>a&#91;1,3&#93;</code> # be careful&#33; this is notation used for matrices, indicating &#39;a&#91;row 1, column 3&#93;&#39;<br/><div class="akin_to_pre">ERROR: BoundsError: attempt to access 5-element Vector{Int64} at index [1, 3]</div> </div></div> </div>   </details></div>
-<p>The second way is through a <strong> range</strong>. Its syntax is <code>&lt;first&gt;:&lt;steps&gt;:&lt;last&gt;</code>, where Julia assumes increments of 1 by default if we omit <code>&lt;steps&gt;</code>. To indicate the first and last index into a range, we can use the keywords <code>begin</code> and <code>end</code>, respectively.</p>
+ 6</div> </div><br/> <div class="julia_repl_NoFormat"> <span style="color:rgb(32, 198, 121) !important; font-weight: bold;">julia&gt</span> <code>x&#91;1,3&#93;</code> # be careful&#33; this is the notation used for matrices, indicating &#39;x&#91;row 1, column 3&#93;&#39;<br/><div class="akin_to_pre">ERROR: BoundsError: attempt to access 5-element Vector{Int64} at index [1, 3]</div> </div></div> </div>   </details></div>
+<p>The second approach is through a <strong> range</strong>. Its syntax is <code>&lt;first&gt;:&lt;steps&gt;:&lt;last&gt;</code>, where Julia assumes increments of 1 by default if we omit <code>&lt;steps&gt;</code>. To indicate the first and last index into a range, we can use the keywords <code>begin</code> and <code>end</code>, respectively.</p>
  <div class=" code_box"> <details  open><summary> Code  </summary> <div class="code_inline"><div class="code_NoFormat"></p>
-<pre><code class="language-julia">a &#61; &#91;4, 5, 6, 7, 8&#93;</code></pre>
-<p></div> </div> <div class="output_in_modal"><div class="sign_output">Output in REPL </div>  <div class="mixed_output_inline"><div class="julia_repl_NoFormat"> <span style="color:rgb(32, 198, 121) !important; font-weight: bold;">julia&gt</span> <code>a&#91;1:2&#93;</code>       # steps with unit increments assumed by default<br/><div class="akin_to_pre">2-element Vector{Int64}:
+<pre><code class="language-julia">x &#61; &#91;4, 5, 6, 7, 8&#93;</code></pre>
+<p></div> </div> <div class="output_in_modal"><div class="sign_output">Output in REPL </div>  <div class="mixed_output_inline"><div class="julia_repl_NoFormat"> <span style="color:rgb(32, 198, 121) !important; font-weight: bold;">julia&gt</span> <code>x&#91;1:2&#93;</code>       # steps with unit increments assumed by default<br/><div class="akin_to_pre">2-element Vector{Int64}:
  4
  5</div> </div></p>
-<div class="julia_repl_NoFormat"> <span style="color:rgb(32, 198, 121) !important; font-weight: bold;">julia&gt</span> <code>a&#91;1:2:5&#93;</code>          # steps with increments of 2 indicated<br/><div class="akin_to_pre">3-element Vector{Int64}:
+<div class="julia_repl_NoFormat"> <span style="color:rgb(32, 198, 121) !important; font-weight: bold;">julia&gt</span> <code>x&#91;1:2:5&#93;</code>          # steps with increments of 2 indicated<br/><div class="akin_to_pre">3-element Vector{Int64}:
  4
  6
  8</div> </div>
-<p><div class="julia_repl_NoFormat"> <span style="color:rgb(32, 198, 121) !important; font-weight: bold;">julia&gt</span> <code>a&#91;begin:end&#93;</code>     # all elements. Equivalent to &#39;a&#91;:&#93;&#39; or &#39;a&#91;1:end&#93;&#39;<br/><div class="akin_to_pre">3-element Vector{Int64}:
+<p><div class="julia_repl_NoFormat"> <span style="color:rgb(32, 198, 121) !important; font-weight: bold;">julia&gt</span> <code>x&#91;begin:end&#93;</code>     # all elements. Equivalent to &#39;x&#91;:&#93;&#39; or &#39;x&#91;1:end&#93;&#39;<br/><div class="akin_to_pre">3-element Vector{Int64}:
  4
  5
  6
