--- a/PAGES/4a0_packages/index.html
+++ b/PAGES/4a0_packages/index.html
@@ -2504,6 +2504,15 @@ mean&#40;x&#41;</code></pre>
 </tbody>
 </table>
  <br/></p>
+ <div class=note>  <div class=title>  <span class="note_title" style="font-weight:500;">
+      <img src="/julia_book/assets/icons/exclamation.png" style="width:auto; height:30px;opacity:0.99;padding-bottom:4px; margin-left:-4px; padding-right:0.4em;"><strong>Operators as Functions</strong>  </span>  </div>  <div class=content>     As we&#39;ll see in the next section, functions can be defined using Unicode characters. Taking advantage of this, mMost of the symbols employed as operators are also available as functions. Below, we illustrate this for several <a href="/julia_book/PAGES/3b_univariables/#arithmetic_operators">arithmetic operators</a>:</p>
+<p> <div class=" code_box"> <details  open><summary> Arithmetic Operators as Functions  </summary> <div class="code_inline"><div class="code_NoFormat"></p>
+<pre><code class="language-julia">&#43;&#40;2,3&#41;      # same as 2 &#43; 3
+-&#40;2,3&#41;      # same as 2 - 3
+*&#40;2,3&#41;      # same as 2 * 3
+/&#40;2,3&#41;      # same as 2 / 3
+^&#40;2,3&#41;      # same as 2 ^ 3</code></pre>
+<p></div> </div>  </details></div>  </div>  </div>
 <p>      </div>
     </div>
   </div>
@@ -2522,11 +2531,11 @@ mean&#40;x&#41;</code></pre>
     </div>
   </div>
 </section>
-<section id="names_of_functions_and_approaches_for_loading_packages_optional" class="scrollspy">
+<section id="approaches_for_loading_packages_and_calling_functions_optional" class="scrollspy">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
-        <h2>Names of Functions and Approaches for Loading Packages (<strong><i>OPTIONAL</i></strong>)</h2></p>
+        <h2>Approaches for Loading Packages and Calling Functions (<strong><i>OPTIONAL</i></strong>)</h2></p>
 <p>The features we&#39;ve covered so far are all you probably need to use packages in Julia. However, there are some additional features worth mentioning. </p>
 <p>First, it&#39;s possible to only load a subset of functions from a package. This feature is particularly relevant for heavy packages that may take some time to fully load. For instance, suppose we only require the function <code>mean</code> from the package <code>Statistics</code>. The following two approaches achieve this and are equivalent.</p>
  <div class=" hide_tab"> <details  open><summary  >  </summary>  <p></p>
@@ -2599,7 +2608,7 @@ average&#40;x&#41;</code></pre>
           </a>
       </span> 
       <span class="center-text"> 
-          © Martin Alfaro <br>Last Modified May 6, 2024 
+          © Martin Alfaro <br>Last Modified May 7, 2024 
       </span> 
   </div> 
 </footer>
@@ -3118,7 +3127,7 @@ for multiple pics in a row
         </li>
         
         <li>
-          <a href="#names_of_functions_and_approaches_for_loading_packages_optional" data-offset="-40">Names of Functions and Approaches for Loading Packages (<strong><i>OPTIONAL</i></strong>)</a>
+          <a href="#approaches_for_loading_packages_and_calling_functions_optional" data-offset="-40">Approaches for Loading Packages and Calling Functions (<strong><i>OPTIONAL</i></strong>)</a>
         </li>
         
       </ul>
