--- a/PAGES/4a1_define_func/index.html
+++ b/PAGES/4a1_define_func/index.html
@@ -2390,7 +2390,9 @@ color: white;
     <div class="row">
       <div class="col-lg- mx-auto">
         <h2>User-Defined Functions</h2></p>
-<p>When writing a script, you&#39;ll need to define your own functions. These functions can eventually be called without invoking any prefix. For example, if you define a function <code>foo</code>, you can run it using <code>foo&#40;x&#41;</code>. <span class="footn supr">&#91;note&#93;  <span class="footn_text"> The method to call a function actually depends on the <strong>module</strong> in which it&#39;s defined, and whether this module has been &quot;imported&quot; or &quot;used&quot;. We won&#39;t cover modules on this website, but they&#39;re essential for large projects. Within a script, users can create multiple modules, each operating as an independent workspace with its own variables. Indeed, when initiating a new session in Julia, you&#39;re actually working within a module called <code>Main</code>.  </span></span> There are two ways to define functions. We&#39;ll refer to them as the <strong>standard form</strong> and the <strong>compact form</strong>. The standard form is the most general and allows you to write both short and long functions. Conversely, the compact form is employed for single-line functions and is reminiscent of mathematical definitions. To illustrate each form, we consider a function <code>foo</code> that sums two variables <code>x</code> and <code>y</code>. </p>
+<p>When writing a script, you&#39;ll need to define your own functions. These functions can eventually be called without invoking any prefix. For example, if you define a function <code>foo</code>, you can run it using <code>foo&#40;x&#41;</code>. <span class="footn supr">&#91;note&#93;  <span class="footn_text"> The method to call a function actually depends on the <strong>module</strong> in which it&#39;s defined, and whether this module has been &quot;imported&quot; or &quot;used&quot;. We won&#39;t cover modules on this website, but they&#39;re essential for large projects. Within a script, users can create multiple modules, each operating as an independent workspace with its own variables. Indeed, when initiating a new session in Julia, you&#39;re actually working within a module called <code>Main</code>.  </span></span></p>
+<p>Function names follow similar rules to variable names. In particular, they accept Unicode characters, making it completely valid to define a function such as <code>∑&#40;x&#41;</code>.</p>
+<p>There are two approaches to defining functions. We&#39;ll refer to them as the <strong>standard form</strong> and the <strong>compact form</strong>. The standard form is the most general and allows you to write both short and long functions. Conversely, the compact form is employed for single-line functions and is reminiscent of mathematical definitions. To illustrate each form, we consider a function <code>foo</code> that sums two variables <code>x</code> and <code>y</code>. </p>
  <div class=" hide_tab"> <details  open><summary  >  </summary>  <p></p>
  <div class="tab_wrapper">
  <div class="tab_code_links">
@@ -2460,26 +2462,38 @@ end</code></pre>
  </div></div>
 <p>  </p></details></div>
  <div class=note>  <div class=title>  <span class="note_title" style="font-weight:500;">
-      <img src="/julia_book/assets/icons/exclamation.png" style="width:auto; height:30px;opacity:0.99;padding-bottom:4px; margin-left:-4px;">      
-      <b> Remark</b> </span>  </div>  <div class=content>     Similar to variable names, function names allow for Unicode characters. For instance, it&#39;s completely valid to define a function <code>∑&#40;x,y&#41;</code>. Indeed, most of the symbols used as operators are also available as functions, as illustrated by the following <a href="/julia_book/PAGES/3b_univariables/#arithmetic_operators">arithmetic operators</a>:</p>
-<p> <div class=" code_box"> <details  open><summary> Arithmetic Operators as Functions  </summary> <div class="code_inline"><div class="code_NoFormat"></p>
-<pre><code class="language-julia">&#43;&#40;2,3&#41;      # same as 2&#43;3
--&#40;2,3&#41;      # same as 2-3
-*&#40;2,3&#41;      # same as 2*3
-/&#40;2,3&#41;      # same as 2/3
-^&#40;2,3&#41;      # same as 2^3</code></pre>
-<p></div> </div>  </details></div>  </div>  </div>
- <div class=note>  <div class=title>  <span class="note_title" style="font-weight:500;">
-      <img src="/julia_book/assets/icons/exclamation.png" style="width:auto; height:30px;opacity:0.99;padding-bottom:4px; margin-left:-4px;">      
-      <b> Remark</b> </span>  </div>  <div class=content>     It&#39;s possible to define functions without arguments, as we show below.</p>
-<p> <div class=" code_box"> <details  open><summary> Functions without Arguments  </summary> <div class="code_inline"><div class="code_NoFormat"></p>
+      <img src="/julia_book/assets/icons/exclamation.png" style="width:auto; height:30px;opacity:0.99;padding-bottom:4px; margin-left:-4px; padding-right:0.4em;"><strong>Functions without Arguments</strong>  </span>  </div>  <div class=content>     It&#39;s possible to define functions that don&#39;t require arguments, as we show below.</p>
+ <div class=" code_box"> <details  open><summary> Functions without Arguments  </summary> <div class="code_inline"><div class="code_NoFormat"></p>
 <pre><code class="language-julia">function foo&#40;&#41;
     a &#61; 1
     b &#61; 1
     return a &#43; b
 end</code></pre>
-<p></div> </div>  </details></div> An example of functions without arguments is <code>Pkg.update&#40;&#41;</code>, which was introduced when we studied packages.  </div>  </div>
-<p>      </div>
+<p></div> </div>  </details></div>
+<p>An example of functions without arguments is <code>Pkg.update&#40;&#41;</code>, which was introduced when we studied packages.  </div>  </div>
+<p> <div class=note>  <div class=title>  <span class="note_title" style="font-weight:500;">
+      <img src="/julia_book/assets/icons/exclamation.png" style="width:auto; height:30px;opacity:0.99;padding-bottom:4px; margin-left:-4px; padding-right:0.4em;"><strong>Order of Function Definitions is Irrelevant</strong>  </span>  </div>  <div class=content>     The order of function definitions in a script doesn&#39;t matter. This means you can define a function that calls another function, even if the latter hasn&#39;t been defined yet. To illustrate this, consider the following two code snippets, which are functionally equivalent.</p>
+<p> <div class=" hide_tab"> <details  open><summary  >  </summary>  <p></p>
+ <div class="tab_wrapper">
+ <div class="tab_code_links">
+    <button class="tablink first_tab active" data-id=""> Code Snippet 1 </button>
+    <button class="tablink" data-id=""> Code Snippet 2 </button>
+</div><div data-id="" class="tabcontent active">
+<div class="code_in_modal"><div class="code_NoFormat"></p>
+<pre><code class="language-julia">foo1&#40;x&#41; &#61; 2 &#43; foo2&#40;x&#41;
+
+foo2&#40;x&#41; &#61; 1 &#43; x</code></pre>
+<p></div></div> 
+<div class="output_in_modal"><div class="sign_output">Output in REPL </div>  <div class="mixed_output_inline"><div class="julia_repl_NoFormat"> <span style="color:rgb(32, 198, 121) !important; font-weight: bold;">julia&gt</span> <code>foo1&#40;2&#41;</code><br/><div class="akin_to_pre">5</div> </div></div> </div> 
+ </div><div data-id="" class="tabcontent">
+<div class="code_in_modal"><div class="code_NoFormat"></p>
+<pre><code class="language-julia">foo2&#40;x&#41; &#61; 1 &#43; x
+
+foo1&#40;x&#41; &#61; 2 &#43; foo2&#40;x&#41;</code></pre>
+<p></div></div> 
+<div class="output_in_modal"><div class="sign_output">Output in REPL </div>  <div class="mixed_output_inline"><div class="julia_repl_NoFormat"> <span style="color:rgb(32, 198, 121) !important; font-weight: bold;">julia&gt</span> <code>foo1&#40;2&#41;</code><br/><div class="akin_to_pre">5</div> </div></div> </div> 
+ </div></div>
+<p>  </p></details></div>  </div>  </div>       </div>
     </div>
   </div>
 </section>
@@ -2490,7 +2504,7 @@ end</code></pre>
         <h2>Positional and Keyword Arguments</h2></p>
 <p>Up to this point, we&#39;ve been calling a function <code>foo&#40;x,y&#41;</code> using <code>foo&#40;2,4&#41;</code>. The distinctive feature of this syntax is that the arguments follow an order, so that the first argument is assigned to <code>x</code> and the second argument to <code>y</code>. Functions called in this manner are known as <strong>positional arguments</strong>.</p>
 <p>One downside of functions with positional arguments is that they&#39;re prone to silent errors: if we mistakenly swap the positions of arguments, the function may still provide an output. The issue becomes more severe as the number of arguments in the function grows, in which case the likelihood of introducing bugs increases.</p>
-<p>A way to circumvent this issue is based on the so-called <strong>keyword arguments</strong>. They allow the function to be called by explicitly indicating its arguments, such as in <code>foo&#40;x&#61;2,y&#61;4&#41;</code>. The order of arguments in this case is unimportant, making both <code>foo&#40;x&#61;2,y&#61;4&#41;</code> and <code>foo&#40;y&#61;4,x&#61;2&#41;</code> feasible and providing the same result.</p>
+<p>A way to circumvent this issue is based on the so-called <strong>keyword arguments</strong>. They require that function calls explicitly indicate its arguments, such as in <code>foo&#40;x&#61;2,y&#61;4&#41;</code>. The order of arguments with keyword arguments becomes unimportant, making both <code>foo&#40;x&#61;2,y&#61;4&#41;</code> and <code>foo&#40;y&#61;4,x&#61;2&#41;</code> feasible and providing the same result.</p>
 <p>The following examples illustrate how to define and run functions with positional and keyword arguments. The approaches can be combined, thus enabling a mix of both. Note that positional arguments necessarily require a semicolon for its definition, although the function calls allow for substituting the semicolon by a comma.</p>
  <div class=" hide_tab"> <details  open><summary  >  </summary>  <p></p>
  <div class="tab_wrapper">
@@ -2808,7 +2822,7 @@ add_three&#40;a&#41; &#61; a &#43; 3</code></pre>
           </a>
       </span> 
       <span class="center-text"> 
-          © Martin Alfaro <br>Last Modified May 6, 2024 
+          © Martin Alfaro <br>Last Modified May 7, 2024 
       </span> 
   </div> 
 </footer>
