--- a/PAGES/9d_reductions/index.html
+++ b/PAGES/9d_reductions/index.html
@@ -2508,7 +2508,7 @@ color: white;
     <div class="row">
       <div class="col-lg- mx-auto">
         <h2>Introduction</h2></p>
-<p>Reductions are a powerful technique for handling <strong>operations that take collections as inputs and return a single element</strong>. A prime example is <code>sum&#40;x&#41;</code>, which calculates the sum of all elements in a vector.</p>
+<p>Reductions are a powerful technique for handling <strong>operations that take collections as inputs and return a single element</strong>. A prime example is <code>sum&#40;x&#41;</code>, which takes a vector <code>x</code> and returns a scalar.</p>
 <p>The method is especially useful when transforming a vector&#39;s elements before computing summary statistics &#40;e.g., sum, maximum, mean, variance&#41;. For instance, consider <code>sum&#40;3 .* x&#41;</code>, where the temporary vector <code>3 .* x</code> must be computed before the sum. In this case, reductions make it possible to decrease memory allocations by circumventing the materialization of <code>3 .* x</code>. </p>
 <p>Reductions work by iteratively applying the operation to pairs of elements, progressively combining the results to produce a single output. For example, when computing the sum of all elements in a vector, a reduction adds the first two elements, then adds the third element to the resulting output, and continues this process until all elements have been summed. In the particular case that the vector to be summed must be firstly transformed, this computation method saves memory allocation. The reason is that reductions rely on scalar operations, and so eliminate the need for the creation and storage of temporary vectors. </p>
 <p>      </div>
