--- a/PAGES/6b_pipes/index.html
+++ b/PAGES/6b_pipes/index.html
@@ -2817,7 +2817,7 @@ output &#61; a              |&gt;
 <p>  </p></details></div>
  <h4> Package Pipe </h4>
 <p>Combining pipes and anonymous functions makes it possible to handle more complex operations. Nonetheless, their combination can quickly result in cumbersome code, which defeats the very own purpose of using pipes to write clean and readable code.</p>
-<p>For operations that return a single output, the <code>Pipe</code> package provides a convenient solution. By prefixing the operation chain with the <code>@pipe</code> macro, the <code>_</code> symbol is interpreted as a reference to the output of the previous step. This feature enables consistent syntax for single-argument operations, where <code>_</code> isn&#39;t required. Simultaneously, it allows for adding <code>_</code> in more complex scenarios, to indicate how the output should be passed to the function or operation. In this way, the macro eliminates the need for boilerplate code associated with anonymous functions.</p>
+<p>For operations that return a single output, the <code>Pipe</code> package provides a convenient solution. By prefixing the operation chain with the <code>@pipe</code> macro, you add the <code>_</code> symbol to reference the output of the previous step. This feature enables consistent syntax for single-argument operations, where <code>_</code> isn&#39;t required. Simultaneously, it allows for the use of <code>_</code> in more complex scenarios, to indicate how the output should be passed to the function or operation. Overall, the macro eliminates the need for boilerplate code associated with anonymous functions.</p>
 <p>To demonstrate its use, we revisit the last example.</p>
  <div class=" hide_tab"> <details  open><summary  >  </summary>  <p></p>
  <div class="tab_wrapper">
@@ -2858,7 +2858,7 @@ output &#61; @pipe a            |&gt;
       <div class="col-lg- mx-auto">
         <h2>Function Composition  <strong>(<i style="color:red">OPTIONAL</i>)</strong></h2></p>
 <p>An alternative approach to nest functions is through the composition operator <code>∘</code>. This can be inserted by tab completion through <code>\circ</code>, and its functionality is the same as in Mathematics. Specifically, for some functions <code>f</code> and <code>g</code>. , <code>&#40;f ∘ g&#41;&#40;x&#41;</code> provides an identical output to <code>f&#40;g&#40;x&#41;&#41;</code>.</p>
-<p>The operator <code>∘</code> also acts as an alternative to piping, providing the same output as <code>x |&gt; f |&gt; g</code>. Moreover, <code>∘</code> is also available as a function, where <code>∘&#40;f,g&#41;&#40;x&#41;</code> is equivalent to <code>&#40;f ∘ g&#41;&#40;x&#41;</code>.</p>
+<p>The operator <code>∘</code> acts as an alternative to piping, providing the same output as <code>x |&gt; f |&gt; g</code>. Moreover, <code>∘</code> is also available as a function, where <code>∘&#40;f,g&#41;&#40;x&#41;</code> is equivalent to <code>&#40;f ∘ g&#41;&#40;x&#41;</code>.</p>
 <p>The following examples show applications with built-in and user-defined functions. </p>
  <div class=" hide_tab"> <details  open><summary  >  </summary>  <p></p>
  <div class="tab_wrapper">
@@ -2890,7 +2890,7 @@ output   &#61; ∘&#40;outer, inner&#41;&#40;a&#41;</code></pre> </div></div>
 <div class="output_in_modal"><div class="sign_output">Output in REPL </div>  <div class="mixed_output_inline"><div class="mixed_output_NoFormat"><div class="julia_line">julia&gt</div> <code>output</code> <br/> <pre><code class="plaintext code-output">3.0</code></pre> </div></div> </div> 
  </div></div>
 <p>  </p></details></div>
-<p>Function composition can also be employed jointly with broadcasting. The notation for this purpose is easier to understand by thinking of the composition as a new function \(h:=f\circ g\), such that \(h\left(x\right):=\left(f\circ g\right)\left(x\right)\) and therefore \(h\left(x\right):=\left(f\circ g\right)\left(x\right)=f\left[g\left(x\right)\right]\). Considering this, broadcasting <code>h</code> would require <code>h.&#40;x&#41;</code>, which is equivalent to <code>&#40;f ∘ g&#41;.&#40;x&#41;</code> or <code>∘&#40;f,g&#41;.&#40;x&#41;</code>.</p>
+<p>Function composition can also be employed along with broadcasting. The notation for this purpose is easier to understand by thinking of the composition as a new function \(h:=f\circ g\), such that \(h\left(x\right):=\left(f\circ g\right)\left(x\right)\) and therefore \(h\left(x\right):=\left(f\circ g\right)\left(x\right)=f\left[g\left(x\right)\right]\). Considering this, broadcasting <code>h</code> would require <code>h.&#40;x&#41;</code>, which is equivalent to <code>&#40;f ∘ g&#41;.&#40;x&#41;</code> or <code>∘&#40;f,g&#41;.&#40;x&#41;</code>.</p>
  <div class=" hide_tab"> <details  open><summary  >  </summary>  <p></p>
  <div class="tab_wrapper">
  <div class="tab_code_links">
